--- a/msvc-book-api-dev.properties
+++ b/msvc-book-api-dev.properties
@@ -3,6 +3,11 @@ configuracion.autor.nombre=Julio Cesar
 configuracion.autor.email=email@mail.com
 
 
+#CONFIGURACION PUERTO AUTOMATICO
+server.port=7070
+#CONFIGURACION AL CREAR UNA INSTANCIA DEL MICROSERVICIO PARA ASIGNAR UN PUERTO RANDOM
+#eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
 server.servlet.context-path=/api/v1
 
 #Database configuration
