--- a/msvc-book-api-dev.properties
+++ b/msvc-book-api-dev.properties
@@ -8,6 +8,7 @@ server.port=7070
 #CONFIGURACION AL CREAR UNA INSTANCIA DEL MICROSERVICIO PARA ASIGNAR UN PUERTO RANDOM
 #eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
+#Context Path Configuration
 server.servlet.context-path=/api/v1
 
 #Database configuration
