--- a/msvc-book-api-dev.properties
+++ b/msvc-book-api-dev.properties
@@ -9,7 +9,7 @@ server.port=7070
 #eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 #Context Path Configuration
-server.servlet.context-path=/api
+server.servlet.context-path=/api/v1
 
 #Database configuration
 spring.datasource.url=jdbc:h2:mem:bookdb
