--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,3 @@
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+config.security.oauth.jwt.key=cuAihCz53DZRjZwbsGcZJ2Ai6At%+_T142uphtJMsk7iQ
