--- a/msvc-usuarios-dev.properties
+++ b/msvc-usuarios-dev.properties
@@ -1,5 +1,8 @@
 server.port=7072
 
+#Context Path Configuration
+server.servlet.context-path=/api/v1
+
 #Database configuration
 spring.datasource.url=jdbc:h2:mem:usuariosdb
 spring.datasource.driverClassName=org.h2.Driver
