--- a/msvc-usuarios-dev.properties
+++ b/msvc-usuarios-dev.properties
@@ -11,4 +11,4 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
-loggin.level.org.hibernate.SQL=DEBUG
+logging.level.org.h2.server.web.DbStarter=DEBUG
