--- a/msvc-usuarios-dev.properties
+++ b/msvc-usuarios-dev.properties
@@ -11,4 +11,8 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
-logging.level.org.h2.server.web.DbStarter=DEBUG
+
+# Logging configuration for H2 database
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+loggin.level.org.hibernate.SQL=DEBUG
