--- a/msvc-book-api-dev.properties
+++ b/msvc-book-api-dev.properties
@@ -3,10 +3,10 @@ configuracion.autor.nombre=Julio Cesar
 configuracion.autor.email=email@mail.com
 
 
-#CONFIGURACION PUERTO AUTOMATICO
-server.port=7070
-#CONFIGURACION AL CREAR UNA INSTANCIA DEL MICROSERVICIO PARA ASIGNAR UN PUERTO RANDOM
-#eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+#CONFIGURACION PUERTO DINAMICO
+server.port=${PORT:0}
+#CONFIGURACION AL CREAR UNA INSTANCIA EN EUREKA DEL MICROSERVICIO PARA ASIGNAR UN PUERTO RANDOM
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 #Context Path Configuration
 server.servlet.context-path=/api/v1
