modificando puerto a puerto dinamico

--- a/msvc-rating-api-dev.properties
+++ b/msvc-rating-api-dev.properties
@@ -1,8 +1,9 @@
 
-#CONFIGURACION PUERTO AUTOMATICO
-server.port=7071
-#CONFIGURACION AL CREAR UNA INSTANCIA DEL MICROSERVICIO PARA ASIGNAR UN PUERTO RANDOM
-#eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+#CONFIGURACION PUERTO DINAMICO
+#server.port=7071
+server.port=${PORT:0}
+#CONFIGURACION AL CREAR UNA INSTANCIA EN EUREKA DEL MICROSERVICIO PARA ASIGNAR UN PUERTO RANDOM
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 #Context Path Configuration
 server.servlet.context-path=/api/v1
