implementando configuracion para el descubrimiento kubernetes

--- a/msvc-usuarios-dev.properties
+++ b/msvc-usuarios-dev.properties
@@ -16,3 +16,6 @@ spring.h2.console.enabled=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 loggin.level.org.hibernate.SQL=DEBUG
+
+#Configuraciones de Spring Cloud Kubernetes
+spring.cloud.kubernetes.discovery.all-namespaces=true
