--- a/msvc-book-api-dev.properties
+++ b/msvc-book-api-dev.properties
@@ -18,3 +18,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+
+#Configuraciones de Spring Cloud Kubernetes
+spring.cloud.kubernetes.discovery.all-namespaces=true
