--- a/application.properties
+++ b/application.properties
@@ -6,3 +6,6 @@ config.security.oauth.jwt.key=cuAihCz53DZRjZwbsGcZJ2Ai6At%+_T142uphtJMsk7iQ
 spring.zipkin.base-url=http://zipkin-server:9411
 spring.sleuth.sampler.probability=1.0
 spring.sleuth.async.enabled=true
+
+#Configuraciones de Spring Cloud Kubernetes
+spring.cloud.kubernetes.discovery.all-namespaces=true
