--- a/msvc-api-client-dev.properties
+++ b/msvc-api-client-dev.properties
@@ -1,8 +1,4 @@
-#CONFIGURACION PUERTO DINAMICO
-#server.port=7071
-server.port=${PORT:0}
-#CONFIGURACION AL CREAR UNA INSTANCIA EN EUREKA DEL MICROSERVICIO PARA ASIGNAR UN PUERTO RANDOM
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+server.port=2002
 
 #Context Path Configuration
 server.servlet.context-path=/api/v1
