configurando un puerto estatico a las apis

--- a/msvc-book-api-dev.properties
+++ b/msvc-book-api-dev.properties
@@ -3,10 +3,7 @@ configuracion.autor.nombre=Julio Cesar
 configuracion.autor.email=email@mail.com
 
 
-#CONFIGURACION PUERTO DINAMICO
-server.port=${PORT:0}
-#CONFIGURACION AL CREAR UNA INSTANCIA EN EUREKA DEL MICROSERVICIO PARA ASIGNAR UN PUERTO RANDOM
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+server.port=2000
 
 #Context Path Configuration
 server.servlet.context-path=/api/v1
