implementando configuracion de ribbon

--- a/msvc-book-api-dev.properties
+++ b/msvc-book-api-dev.properties
@@ -11,6 +11,9 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 #Context Path Configuration
 server.servlet.context-path=/api/v1
 
+#Ribbon configuration
+eureka.instance.preferIpAddress=true
+
 #Database configuration
 spring.datasource.url=jdbc:h2:mem:bookdb
 spring.datasource.driverClassName=org.h2.Driver
