ajustando puertos fijos a los microservicios

--- a/msvc-rating-api-dev.properties
+++ b/msvc-rating-api-dev.properties
@@ -1,9 +1,6 @@
 
-#CONFIGURACION PUERTO DINAMICO
-#server.port=7071
-server.port=${PORT:0}
-#CONFIGURACION AL CREAR UNA INSTANCIA EN EUREKA DEL MICROSERVICIO PARA ASIGNAR UN PUERTO RANDOM
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+#CONFIGURACION PUERTO
+server.port=2001
 
 #Context Path Configuration
 server.servlet.context-path=/api/v1
