--- a/application.properties
+++ b/application.properties
@@ -3,6 +3,6 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 config.security.oauth.jwt.key=cuAihCz53DZRjZwbsGcZJ2Ai6At%+_T142uphtJMsk7iQ
 
 #Indicar donde se encuentra zipkin server
-spring.zipkin.base-url=http://host.docker.internal:9411
+spring.zipkin.base-url=http://localhost:9411
 spring.sleuth.sampler.probability=1.0
 spring.sleuth.async.enabled=true
